# auto-reflect

./: README.md  alignment.ipynb  prototype.ipynb  pyproject.toml  test_API.ipynb  test_API_older.ipynb
.ipynb_checkpoints/: test_API-checkpoint.ipynb
architecture/: COMPLETE_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PROTOTYPE_README.md
data/: c-kedge.txt
notebooks/: READEME.md
src/api_dev/: __init__.py  accessors.py  core.py  instrument.py  scan.py  server.py  types.py  utils.py  validation.py
src/api_dev/nexafs/: __init__.py  nexafs.py
src/mcp_server/: __init__.py  __main__.py  connection.py  models.py  server.py
src/mcp_server/tools/: __init__.py  ai_tools.py  dio_tools.py  motor_tools.py
tests/: __init__.py  conftest.py  test_nexafs.py  test_utils.py  test_validation.py
