[project]
name = "api-dev"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.0",
    "asyncstdlib>=3.13.1",
    "bcs",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dacite>=1.9.2",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "dotenv>=0.9.9",
    "executing==2.2.1",
    "fonttools==4.60.0",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.0",
    "pure-eval==0.2.3",
    "pydantic-settings>=2.11.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pyrefly==0.33.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "ruff==0.13.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "setuptools>=80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "tqdm>=4.67.1",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "uncertainties>=3.2.3",
    "wcwidth==0.2.13",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
bcs = { git = "https://github.com/ALS-RSOXS/bcs-install" }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
